deploy/clusters/freysa-staging-use1/dev/transformer-telegram-chat.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: telegram-chat-version
target:
  kind: StatefulSet
  name: telegram-chat
patch: |
  apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: telegram-chat
  spec:
    template:
      metadata:
        labels:
          app.kubernetes.io/version: 'sha-34bce92'
          version: 'sha-34bce92'
