deploy/clusters/freysa-staging-use1/dev/patch-telegram-chat-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: telegram-chat
spec:
  hosts:
  - telegram-chat-dev.et-use1.ghostagent.org
